# yage-native

./: .gitignore  .gitmodules  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/yourmateapps/retropal/: MainActivity.kt  YageTextureBridge.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  launch_background.xml  tv_banner.xml
android/app/src/main/res/drawable-v21/: launch_background.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml
android/app/src/main/res/values-night-v31/: styles.xml
android/app/src/main/res/values-v31/: styles.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  game_mode_config.xml
assets/system/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: input_profile.dart  mgba_bindings.dart  mgba_stub.dart  rcheevos_bindings.dart  rcheevos_hash_bindings.dart
lib/data/: whats_new.dart
lib/models/: cheat.dart  emulator_settings.dart  game_rom.dart  gamepad_layout.dart  gamepad_skin.dart  ra_achievement.dart  system_filter.dart
lib/providers/: app_providers.dart
lib/screens/: achievements_screen.dart  cheat_screen.dart  game_screen.dart  home_screen.dart  ra_login_screen.dart  settings_screen.dart  splash_screen.dart
lib/services/: ad_service.dart  app_version_service.dart  batch_import_service.dart  bios_service.dart  cheat_session.dart  consent_service.dart  cover_art_service.dart  emulator_service.dart  game_database.dart  game_library_service.dart  gamepad_input.dart  link_cable_service.dart  ra_runtime_service.dart  rcheevos_client.dart  remove_ads_purchase_service.dart  retro_achievements_service.dart  rom_folder_service.dart  save_backup_service.dart  settings_service.dart  tv_http_server.dart  whats_new_service.dart
lib/utils/: device_memory.dart  graphics_quality.dart  lzma_decoder.dart  safe_url_launcher.dart  seven_zip_extractor.dart  theme.dart  tv_detector.dart  zip_extractor.dart
lib/widgets/: banner_ad_widget.dart  game_card.dart  game_display.dart  import_progress_dialog.dart  platform_filter.dart  rom_folder_setup_dialog.dart  tv_focusable.dart  tv_http_upload_dialog.dart  tv_media_store_browser.dart  virtual_gamepad.dart  whats_new_dialog.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  mupen64plus.ini  yage_audio.c  yage_callbacks.c  yage_core_vars.c  yage_env_callback.c  yage_frame_loop.c  yage_gpu_texture.c  yage_hw_render.c  yage_input.c  yage_internal.h  yage_libretro.c  yage_libretro.h  yage_options_ui.c  yage_rcheevos.c  yage_rcheevos.h  yage_state.c  yage_video.c
scripts/: build_libretro_cores.sh  fetch_libretro_cores.ps1  fetch_libretro_cores.sh
test/: bios_service_test.dart  game_rom_detection_test.dart  gamepad_input_mapping_test.dart  gamepad_layout_persistence_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
